<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectCourseActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/Theme.ProjectSheep"
        android:elevation="10dp"
        app:layout_constraintTop_toTopOf="parent "
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <CheckBox
        android:id="@+id/cbMechanical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/cbMechanical"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.225"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/cbAeronautics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cbAeronautics"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbMechanical" />

    <CheckBox
        android:id="@+id/cbRobotics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cbRobotics"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.261"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbAeronautics" />

    <CheckBox
        android:id="@+id/cbElectricalAndElectronic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cbElectricalAndElectronic"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.247"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbRobotics" />

    <CheckBox
        android:id="@+id/cbInformationAndComputerScience"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cbInformationAndComputerScience"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.216"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbElectricalAndElectronic" />

    <CheckBox
        android:id="@+id/cbCivilAndEnvironmental"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cbCivilAndEnvironmental"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.239"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbInformationAndComputerScience" />

    <CheckBox
        android:id="@+id/cbMediaInformatics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cbMediaInformatics"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbCivilAndEnvironmental" />

    <CheckBox
        android:id="@+id/cbManagementSystems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cbManagementSystems"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.224"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbMediaInformatics" />

    <CheckBox
        android:id="@+id/cbPsychologicalScience"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cbPsychologicalScience"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.216"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbManagementSystems" />

    <CheckBox
        android:id="@+id/cbArchitecture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cbArchitecture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.204"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbPsychologicalScience" />

    <CheckBox
        android:id="@+id/cbAppliedChemistry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cbAppliedChemistry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.216"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbArchitecture" />

    <CheckBox
        android:id="@+id/cbAppliedBioscience"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cbAppliedBioscience"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.235"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbAppliedChemistry" />

    <CheckBox
        android:id="@+id/cbTeacherTraining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cbTeacherTraining"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.188"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbAppliedBioscience" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btStart"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="328dp"
        android:layout_height="66dp"
        android:layout_marginBottom="20dp"
        android:onClick="onStartButtonClick"
        android:shape="rectangle"
        android:text="@string/btStart"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>