<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/LogoTextView"
        android:layout_width="151dp"
        android:layout_height="66dp"
        android:gravity="center"
        android:text="@string/Logo"
        android:textColor="@color/black"
        android:textSize="56sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.084" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btLogin"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="328dp"
        android:layout_height="66dp"
        android:shape="rectangle"
        android:text="@string/btLogin"
        android:textSize="14sp"
        android:onClick="onLoginButtonClick"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.595" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btMakeAccount"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="328dp"
        android:layout_height="66dp"
        android:shape="rectangle"
        android:text="@string/btMakeAccount"
        android:textColor="@color/system_gray_800"
        android:textSize="14sp"
        android:onClick="onMakeAccountButtonClick"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.772"
        app:strokeColor="@color/dark_kit_blue"
        app:strokeWidth="2dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextEmail"
        android:layout_width="328dp"
        android:layout_height="66dp"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        android:textColorHint="@color/system_gray_500"
        app:boxBackgroundColor="@color/right_gray"
        app:layout_constraintBottom_toTopOf="@id/editTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.385"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.931">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editTextEmail"
            android:singleLine="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextPassword"
        android:layout_width="328dp"
        android:layout_height="66dp"
        android:layout_marginBottom="56dp"
        android:paddingStart="15dp"
        android:textColorHint="@color/system_gray_500"
        app:boxBackgroundColor="@color/right_gray"
        app:layout_constraintBottom_toTopOf="@+id/btLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.385"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editTextPassword"
            android:inputType="textPassword"
            android:singleLine="false" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>